test_regress/t/t_inst_param_comma_bad.out
%Error: t/t_inst_param_comma_bad.v:35:15: syntax error, unexpected ')', expecting IDENTIFIER-for-type
   35 |    M #(.P(13),) m1(
      |               ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_inst_param_comma_bad.v:40:11: syntax error, unexpected ')', expecting IDENTIFIER-for-type
   40 |    M #(14,) m2 (
      |           ^
%Error: t/t_inst_param_comma_bad.v:45:11: syntax error, unexpected ')', expecting IDENTIFIER-for-type
   45 |    M #(14,) m3 (
      |           ^
%Error: t/t_inst_param_comma_bad.v:50:15: syntax error, unexpected ')', expecting IDENTIFIER-for-type
   50 |    N #(.P(13),) n1(
      |               ^
%Error: t/t_inst_param_comma_bad.v:55:11: syntax error, unexpected ')', expecting IDENTIFIER-for-type
   55 |    N #(14,) n2 (
      |           ^
%Error: t/t_inst_param_comma_bad.v:60:11: syntax error, unexpected ')', expecting IDENTIFIER-for-type
   60 |    N #(14,) n3 (
      |           ^
%Error: Exiting due to
